--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;600;700;800&family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;800;900&family=Zilla+Slab:wght@300;400;500;600;700&display=swap"
 			rel="stylesheet"
 		/>
 
