--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+
 		<title>Özkan Mali Müşavirlik</title>
+		<meta
+			name="description"
+			content="Mali Müşavirlik, Gayrimenkul Değerleme ve Destek Danışmanlığı hizmetlerini Kayseri ve Yahyalı merkezlerimizle yürütmekteyiz. "
+		/>
+
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="apple-touch-icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
